--- a/index.html
+++ b/index.html
@@ -12,20 +12,43 @@
         <a href="#" class="abrir" onclick="abrirMenu()">&#9776</a>
     </header>
     <nav id="menu">
-        <div>
+        <section>
             <a href="#" class="x" onclick="fecharMenu()">&times</a>
-        </div>
+        </section>
         <h1>MENU</h1>
-        <a href="Abacaxi.html">Abacaxi</a>
-        <a href="Limão.html">Limão</a>
-        <a href="Manga.html">Manga</a>
-        <a href="Morango.html">Morango</a>
-        <a href="Uva.html">Uva</a>
+        <section>
+            <img src="./img/icon/abacaxi.png" alt="">
+            <a href="Abacaxi.html">Abacaxi</a>
+        </section>
+        <section>
+            <img src="./img/icon/laranja.png" alt="">
+            <a href="Laranja.html">Laranja</a>
+        </section>
+        <section>
+            <img src="./img/icon/limao.png" alt="">
+            <a href="Limão.html">Limão</a>
+        </section>
+        <section>
+            <img src="./img/icon/manga.png" alt="">
+            <a href="Manga.html">Manga</a>
+        </section>
+        <section>
+            <img src="./img/icon/morango.png" alt="">
+            <a href="Morango.html">Morango</a>
+        </section>
+        <section>
+            <img src="./img/icon/uva.png" alt="">
+            <a href="Uva.html">Uva</a>
+        </section>
     </nav>
     <main>
         <div>
             <h1>Drinks</h1>
         </div>
+        <picture>
+            <img src="./img/WhatsApp Image 2022-12-20 at 11.15.10 (1).jpeg" alt="">
+            <img src="./img/WhatsApp Image 2022-12-20 at 11.15.10 (2).jpeg" alt="">
+        </picture>
     </main>
 
     <script>
