--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
             <h1>Drinks</h1>
         </div>
         <picture>
-            <img src="./img/WhatsApp Image 2022-12-20 at 11.15.10 (1).jpeg" alt="">
-            <img src="./img/WhatsApp Image 2022-12-20 at 11.15.10 (2).jpeg" alt="">
+            <img src="./img/Drink1.png" alt="foto">
+            <img src="./img/Drink2.png" alt="foto">
+            <img src="./img/Drink3.png" alt="foto">
+            
         </picture>
     </main>
 
