--- a/Manga.html
+++ b/Manga.html
@@ -42,8 +42,8 @@
             <a href="Uva.html">Uva</a>
         </section>
         <section>
-            <img src="./img/icon/drink.png" alt="">
-            <a href="index.html">Todos</a>
+            <img src="./img/icon/1home.png" alt="">
+            <a href="index.html">Início</a>
         </section>
     </nav>
     <main>
