--- a/index.html
+++ b/index.html
@@ -42,15 +42,11 @@
         </section>
     </nav>
     <main>
+        <h1>Sejam Bem</h1>
+        <h1 class="h1p">Vindos !</h1>
         <div>
-            <h1>Drinks</h1>
+            <img src="./img/315389-P94R5O-465-removebg.png" alt="">
         </div>
-        <picture>
-            <img src="./img/Drink1.png" alt="foto">
-            <img src="./img/Drink2.png" alt="foto">
-            <img src="./img/Drink3.png" alt="foto">
-            
-        </picture>
     </main>
 
     <script>
