--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             <img src="./img/icon/uva.png" alt="">
             <a href="Uva.html">Uva</a>
         </section>
+        <section>
+            <img src="./img/icon/zpedido.png" alt="">
+            <a href="pedido.html">Pedido</a>
+        </section>
     </nav>
     <main>
         <h1>Sejam Bem</h1>
