--- a/Manga.html
+++ b/Manga.html
@@ -11,6 +11,9 @@
 <body>
     <header>
         <a href="#" class="abrir" onclick="abrirMenu()">&#9776</a>
+        <div>
+            <a href="index.html" class="ini">ínicio</a>
+        </div>
     </header>
     <nav id="menu">
         <section>
