--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
         <h1>MENU</h1>
         <section>
             <img src="./img/icon/abacaxi.png" alt="">
-            <a href="Abacaxi.html">Abacaxi</a>
+            <a href="abacaxi.html">Abacaxi</a>
         </section>
         <section>
             <img src="./img/icon/laranja.png" alt="">
-            <a href="Laranja.html">Laranja</a>
+            <a href="laranja.html">Laranja</a>
         </section>
         <section>
             <img src="./img/icon/limao.png" alt="">
-            <a href="Limão.html">Limão</a>
+            <a href="limão.html">Limão</a>
         </section>
         <section>
             <img src="./img/icon/manga.png" alt="">
-            <a href="Manga.html">Manga</a>
+            <a href="manga.html">Manga</a>
         </section>
         <section>
             <img src="./img/icon/morango.png" alt="">
-            <a href="Morango.html">Morango</a>
+            <a href="morango.html">Morango</a>
         </section>
         <section>
             <img src="./img/icon/uva.png" alt="">
-            <a href="Uva.html">Uva</a>
+            <a href="uva.html">Uva</a>
         </section>
         <section>
             <img src="./img/icon/zpedido.png" alt="">
@@ -52,6 +52,9 @@
             <img src="./img/315389-P94R5O-465-removebg.png" alt="">
         </div>
     </main>
+    <footer>
+        <h6>by Sthefany Bueno</h6>
+    </footer>
 
     <script>
         function abrirMenu() {
