--- a/pedido.html
+++ b/pedido.html
@@ -53,6 +53,9 @@
     <main>
         <h1>Faça o</h1>
         <h1 class="h1p">seu pedido</h1>
+        <form action="https://formsubmit.co/your@email.com" method="POST">
+        
+        </form>
     </main>
 
     <script>
