--- a/abacaxi.html
+++ b/abacaxi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manga</title>
+    <title>Abacaxi</title>
     <link rel="stylesheet" href="./css/fruta.css">
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
@@ -46,10 +46,10 @@
         </section>
     </nav>
     <main>
-        <h1>MANGA</h1>
+        <h1>ABACAXI</h1>
         <picture>
-            <img src="./img/manga1.png" alt="">
-            <img src="./img/" alt="">
+            <img src="./img" alt="">
+            <img src="./img/abacaxi2.png" alt="">
         </picture>
     </main>
 
