--- a/limao.html
+++ b/limao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manga</title>
+    <title>Limão</title>
     <link rel="stylesheet" href="./css/fruta.css">
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
@@ -46,9 +46,9 @@
         </section>
     </nav>
     <main>
-        <h1>MANGA</h1>
+        <h1>LIMÃO</h1>
         <picture>
-            <img src="./img/manga1.png" alt="">
+            <img src="./img/limao1.png" alt="">
             <img src="./img/" alt="">
         </picture>
     </main>
