--- a/abacaxi.html
+++ b/abacaxi.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abacaxi</title>
-    <link rel="stylesheet" href="./css/fruta.css">
     <link rel="stylesheet" href="./css/estilo.css">
+    <link rel="stylesheet" href="./css/fruta.css">
 </head>
 <body>
     <header>
@@ -22,23 +22,23 @@
         <h1>MENU</h1>
         <section>
             <img src="./img/icon/abacaxi.png" alt="">
-            <a href="Abacaxi.html">Abacaxi</a>
+            <a href="abacaxi.html">Abacaxi</a>
         </section>
         <section>
             <img src="./img/icon/laranja.png" alt="">
-            <a href="Laranja.html">Laranja</a>
+            <a href="laranja.html">Laranja</a>
         </section>
         <section>
             <img src="./img/icon/limao.png" alt="">
-            <a href="Limão.html">Limão</a>
+            <a href="limao.html">Limão</a>
         </section>
         <section>
             <img src="./img/icon/manga.png" alt="">
-            <a href="Manga.html">Manga</a>
+            <a href="manga.html">Manga</a>
         </section>
         <section>
             <img src="./img/icon/uva.png" alt="">
-            <a href="Uva.html">Uva</a>
+            <a href="uva.html">Uva</a>
         </section>
         <section>
             <img src="./img/icon/zpedido.png" alt="">
@@ -47,10 +47,10 @@
     </nav>
     <main>
         <h1>ABACAXI</h1>
-        <picture>
-            <img src="./img" alt="">
+        <div class="img">
+            <img src="./img/abacaxi1.png" alt="">
             <img src="./img/abacaxi2.png" alt="">
-        </picture>
+        </div>
     </main>
 
     <script>
