--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </section>
         <section>
             <img src="./img/icon/limao.png" alt="">
-            <a href="limão.html">Limão</a>
+            <a href="limao.html">Limão</a>
         </section>
         <section>
             <img src="./img/icon/manga.png" alt="">
