--- a/laranja.html
+++ b/laranja.html
@@ -22,23 +22,23 @@
         <h1>MENU</h1>
         <section>
             <img src="./img/icon/abacaxi.png" alt="">
-            <a href="Abacaxi.html">Abacaxi</a>
+            <a href="abacaxi.html">Abacaxi</a>
         </section>
         <section>
             <img src="./img/icon/laranja.png" alt="">
-            <a href="Laranja.html">Laranja</a>
+            <a href="laranja.html">Laranja</a>
         </section>
         <section>
             <img src="./img/icon/limao.png" alt="">
-            <a href="Limão.html">Limão</a>
+            <a href="limao.html">Limão</a>
         </section>
         <section>
             <img src="./img/icon/manga.png" alt="">
-            <a href="Manga.html">Manga</a>
+            <a href="manga.html">Manga</a>
         </section>
         <section>
             <img src="./img/icon/uva.png" alt="">
-            <a href="Uva.html">Uva</a>
+            <a href="uva.html">Uva</a>
         </section>
         <section>
             <img src="./img/icon/zpedido.png" alt="">
@@ -48,7 +48,7 @@
     <main>
         <h1>LARANJA</h1>
         <picture>
-            <img src="./img" alt="">
+            <img src="./img/laranja1.png" alt="">
             <img src="./img/laranja2.png" alt="">
         </picture>
     </main>
