--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1>Sejam Bem</h1>
         <h1 class="h1p">Vindos !</h1>
         <div>
-            <img src="./img/315389-P94R5O-465-removebg.png" alt="">
+            <img  class="principal" src="./img/315389-P94R5O-465-removebg.png" alt="">
         </div>
     </main>
     <footer>
