--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
         </section>
     </nav>
     <main>
-        <h1>Sejam Bem</h1>
-        <h1 class="h1p">Vindos !</h1>
+        <div>
+            <h1>Sejam Bem</h1>
+            <h1 class="h1p">Vindos !</h1>
+        </div>
         <div>
             <img  class="principal" src="./img/315389-P94R5O-465-removebg.png" alt="">
         </div>
