--- a/limao.html
+++ b/limao.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <a href="#" class="abrir" onclick="abrirMenu()">&#9776</a>
-        <div>
-            <a href="index.html" class="ini">ínicio</a>
+        <div class="ini">
+            <a href="index.html" class="texti">Início</a>
         </div>
     </header>
     <nav id="menu">
@@ -46,11 +46,11 @@
         </section>
     </nav>
     <main>
-        <h1>LIMÃO</h1>
-        <picture>
+        <h1>Limão</h1>
+        <div class="img">
             <img src="./img/limao1.png" alt="">
-            <img src="./img/limao2.png" alt="">
-        </picture>
+            <!- img src="./img/" alt=""->
+        </div>
     </main>
 
     <script>
