--- a/abacaxi.html
+++ b/abacaxi.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abacaxi</title>
-    <link rel="stylesheet" href="./css/estilo.css">
     <link rel="stylesheet" href="./css/fruta.css">
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
 <body>
     <header>
         <a href="#" class="abrir" onclick="abrirMenu()">&#9776</a>
-        <div>
-            <a href="index.html" class="ini">ínicio</a>
+        <div class="ini">
+            <a href="index.html" class="texti">Início</a>
         </div>
     </header>
     <nav id="menu">
@@ -48,7 +48,7 @@
     <main>
         <h1>ABACAXI</h1>
         <div class="img">
-            <img src="./img/abacaxi1.png" alt="">
+            <!- img src="./img/" alt=""->
             <img src="./img/abacaxi2.png" alt="">
         </div>
     </main>
