--- a/manga.html
+++ b/manga.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <a href="#" class="abrir" onclick="abrirMenu()">&#9776</a>
-        <div>
-            <a href="index.html" class="ini">ínicio</a>
+        <div class="ini">
+            <a href="index.html" class="texti">Início</a>
         </div>
     </header>
     <nav id="menu">
@@ -47,10 +47,10 @@
     </nav>
     <main>
         <h1>MANGA</h1>
-        <picture>
+        <div class="img">
             <img src="./img/manga1.png" alt="">
             <img src="./img/manga2.png" alt="">
-        </picture>
+        </div>
     </main>
 
     <script>
