--- a/pedido.html
+++ b/pedido.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <a href="#" class="abrir" onclick="abrirMenu()">&#9776</a>
-        <div>
-            <a href="index.html" class="ini">ínicio</a>
+        <div class="ini">
+            <a href="index.html" class="texti">Início</a>
         </div>
     </header>
     <nav id="menu">
