--- a/abacaxi.html
+++ b/abacaxi.html
@@ -48,7 +48,7 @@
     <main>
         <h1>ABACAXI</h1>
         <div class="img">
-            <!- img src="./img/" alt=""->
+            <img src="./img/abacaxi1.png" alt="">
             <img src="./img/abacaxi2.png" alt="">
         </div>
     </main>
