--- a/laranja.html
+++ b/laranja.html
@@ -48,7 +48,7 @@
     <main>
         <h1>LARANJA</h1>
         <div class="img">
-            <!- img src="./img/" alt=""->
+            <img src="./img/laranja1.png" alt="">
             <img src="./img/laranja2.png" alt="">
         </div>
     </main>
