--- a/limao.html
+++ b/limao.html
@@ -49,7 +49,7 @@
         <h1>Limão</h1>
         <div class="img">
             <img src="./img/limao1.png" alt="">
-            <!- img src="./img/" alt=""->
+            <img src="./img/limao2.png" alt="">
         </div>
     </main>
 
