--- a/sucesso.html
+++ b/sucesso.html
@@ -47,30 +47,9 @@
         </section>
     </nav>
     <main>
-        <h1>Faça o</h1>
-        <h1 class="h1p">seu pedido</h1>
-        <form action="https://formsubmit.co/profissional1889@gmail.com" method="POST">
-            <input type="hidden" name="_next" value="https://project-drinks-one.vercel.app/sucesso.html"/>
-            <input type="hidden" name="_autoresponse" value="Pedido anotado, logo logo estará pronto!"/>
-            <input type="hidden" name="_captcha" value="false"/>
-            <input type="text" name="Name" placeholder="Seu nome" required>
-            <input type="email" name="Email" placeholder="Email" required>
-            <select name="Drink" id="drink" aria-placeholder="Escolha a bebida" required>
-                <option value="" disabled selected>Escolha seu drink:</option>
-                <option value="Abacaxi Ice">Abacaxi Ice</option>
-                <option value="Abacaxi X">Abacaxi X</option>
-                <option value="Laranja Fresh">Laranja Fresh</option>
-                <option value="Laranjin">Laranjin</option>
-                <option value="Limão Cítrico">Limão Cítrico</option>
-                <option value="Limão Ice">Limão Ice</option>
-                <option value="Manga Cítrica">Manga Cítrica</option>
-                <option value="Manga Fresh">Manga Fresh</option>
-                <option value="Uva Cítrica">Uva Cítrica</option>
-                <option value="Uvinha">Uvinha</option>
-            </select>
-            <input type="text" name="Obs" placeholder="Obs">
-            <button type="submit">Enviar</button>
-        </form>
+        <h1>Pedido feito</h1>
+        <h1 class="h1p">com sucesso!</h1>
+        <a href="./index.html">&larr</a>
     </main>
 
     <script>
