--- a/sucesso.html
+++ b/sucesso.html
@@ -47,9 +47,11 @@
         </section>
     </nav>
     <main>
-        <h1>Pedido feito</h1>
-        <h1 class="h1p">com sucesso!</h1>
-        <a href="./index.html">&larr</a>
+        <div class="suc">
+            <h1>Pedido feito</h1>
+            <h1 class="h1p">com sucesso!</h1>
+        </div>
+        <a href="./index.html">&#8249 Voltar</a>
     </main>
 
     <script>
