--- a/sucesso.html
+++ b/sucesso.html
@@ -48,7 +48,7 @@
     </nav>
     <main>
         <div class="suc">
-            <h1>Pedido f</h1>
+            <h1>Pedido feito</h1>
             <h1 class="h1p">com sucesso!</h1>
         </div>
         <a href="./index.html">&#8249 Voltar</a>
