--- a/sucesso.html
+++ b/sucesso.html
@@ -47,11 +47,8 @@
         </section>
     </nav>
     <main>
-        <div class="suc">
-            <h1>Pedido feito</h1>
-            <h1 class="h1p">com sucesso!</h1>
-        </div>
-        <a href="./index.html">&#8249 Voltar</a>
+        <h1 class="h1p">Pedido feito com sucesso!</h1>
+        <a href="./index.html" class="seta">&#8249 Voltar</a>
     </main>
 
     <script>
