--- a/sucesso.html
+++ b/sucesso.html
@@ -47,7 +47,7 @@
         </section>
     </nav>
     <main>
-        <h1 class="h1p">Pedido feito com sucesso!</h1>
+        <h1 class="feito">Pedido feito com sucesso!</h1>
         <a href="./index.html" class="seta">&#8249 Voltar</a>
     </main>
 
