--- a/melancia.html
+++ b/melancia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abacaxi</title>
+    <title>Melancia</title>
     <link rel="stylesheet" href="./css/fruta.css">
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
@@ -21,10 +21,6 @@
         </section>
         <h1>MENU</h1>
         <section>
-            <img src="./img/icon/abacaxi.png" alt="">
-            <a href="abacaxi.html">Abacaxi</a>
-        </section>
-        <section>
             <img src="./img/icon/laranja.png" alt="">
             <a href="laranja.html">Laranja</a>
         </section>
@@ -37,6 +33,10 @@
             <a href="manga.html">Manga</a>
         </section>
         <section>
+            <img src="./img/icon/melancia.png" alt="">
+            <a href="melancia.html">Melancia</a>
+        </section>
+        <section>
             <img src="./img/icon/uva.png" alt="">
             <a href="uva.html">Uva</a>
         </section>
@@ -46,10 +46,9 @@
         </section>
     </nav>
     <main>
-        <h1>ABACAXI</h1>
+        <h1>MELANCIA</h1>
         <div class="img">
-            <img src="./img/abacaxi1.png" alt="">
-            <img src="./img/abacaxi2.png" alt="">
+            <img src="./img/melancia1.png" alt="">
         </div>
     </main>
 
