--- a/limao.html
+++ b/limao.html
@@ -21,10 +21,6 @@
         </section>
         <h1>MENU</h1>
         <section>
-            <img src="./img/icon/abacaxi.png" alt="">
-            <a href="abacaxi.html">Abacaxi</a>
-        </section>
-        <section>
             <img src="./img/icon/laranja.png" alt="">
             <a href="laranja.html">Laranja</a>
         </section>
@@ -35,6 +31,10 @@
         <section>
             <img src="./img/icon/manga.png" alt="">
             <a href="manga.html">Manga</a>
+        </section>
+        <section>
+            <img src="./img/icon/melancia.png" alt="">
+            <a href="melancia.html">Melancia</a>
         </section>
         <section>
             <img src="./img/icon/uva.png" alt="">
