--- a/pedido.html
+++ b/pedido.html
@@ -22,10 +22,6 @@
         </section>
         <h1>MENU</h1>
         <section>
-            <img src="./img/icon/abacaxi.png" alt="">
-            <a href="abacaxi.html">Abacaxi</a>
-        </section>
-        <section>
             <img src="./img/icon/laranja.png" alt="">
             <a href="laranja.html">Laranja</a>
         </section>
@@ -36,6 +32,10 @@
         <section>
             <img src="./img/icon/manga.png" alt="">
             <a href="manga.html">Manga</a>
+        </section>
+        <section>
+            <img src="./img/icon/melancia.png" alt="">
+            <a href="melancia.html">Melancia</a>
         </section>
         <section>
             <img src="./img/icon/uva.png" alt="">
@@ -51,20 +51,17 @@
         <h1 class="h1p">seu pedido</h1>
         <form action="https://formsubmit.co/profissional1889@gmail.com" method="POST">
             <input type="hidden" name="_next" value="https://project-drinks-one.vercel.app/sucesso.html"/>
-            <input type="hidden" name="_autoresponse" value="Pedido anotado, logo logo estará pronto!"/>
             <input type="hidden" name="_captcha" value="false"/>
             <input type="text" name="Name" placeholder="Seu nome" required>
-            <input type="email" name="Email" placeholder="Email" required>
             <select name="Drink" id="drink" aria-placeholder="Escolha a bebida" required>
                 <option value="" disabled selected>Escolha seu drink:</option>
-                <option value="Abacaxi Ice">Abacaxi Ice</option>
-                <option value="Abacaxi X">Abacaxi X</option>
                 <option value="Laranja Fresh">Laranja Fresh</option>
                 <option value="Laranjin">Laranjin</option>
                 <option value="Limão Cítrico">Limão Cítrico</option>
                 <option value="Limão Ice">Limão Ice</option>
                 <option value="Manga Cítrica">Manga Cítrica</option>
                 <option value="Manga Fresh">Manga Fresh</option>
+                <option value="Melancia Ice">Melancia Ice</option>
                 <option value="Uva Cítrica">Uva Cítrica</option>
                 <option value="Uvinha">Uvinha</option>
             </select>
