--- a/abacaxi.html
+++ b/abacaxi.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pedido</title>
+    <title>Abacaxi</title>
     <link rel="stylesheet" href="./css/fruta.css">
     <link rel="stylesheet" href="./css/estilo.css">
-    <link rel="stylesheet" href="./css/pedido.css">
 </head>
 <body>
     <header>
@@ -51,27 +50,11 @@
         </section>
     </nav>
     <main>
-        <h1>Faça o</h1>
-        <h1 class="h1p">seu pedido</h1>
-        <form action="https://formsubmit.co/profissional1889@gmail.com" method="POST">
-            <input type="hidden" name="_next" value="https://project-drinks-one.vercel.app/sucesso.html"/>
-            <input type="hidden" name="_captcha" value="false"/>
-            <input type="text" name="Name" placeholder="Seu nome" required>
-            <select name="Drink" id="drink" aria-placeholder="Escolha a bebida" required>
-                <option value="" disabled selected>Escolha seu drink:</option>
-                <option value="Laranja Fresh">Laranja Fresh</option>
-                <option value="Laranjin">Laranjin</option>
-                <option value="Limão Cítrico">Limão Cítrico</option>
-                <option value="Limão Ice">Limão Ice</option>
-                <option value="Manga Cítrica">Manga Cítrica</option>
-                <option value="Manga Fresh">Manga Fresh</option>
-                <option value="Melancia Ice">Melancia Ice</option>
-                <option value="Uva Cítrica">Uva Cítrica</option>
-                <option value="Uvinha">Uvinha</option>
-            </select>
-            <input type="text" name="Obs" placeholder="Obs">
-            <button type="submit">Enviar</button>
-        </form>
+        <h1>ABACAXI</h1>
+        <div class="img">
+            <img src="./img/abacaxi1.png" alt="">
+            <img src="./img/abacaxi2.png" alt="">
+        </div>
     </main>
 
     <script>
