--- a/sucesso.html
+++ b/sucesso.html
@@ -22,6 +22,10 @@
         </section>
         <h1>MENU</h1>
         <section>
+            <img src="./img/icon/abacaxi.png" alt="">
+            <a href="abacaxi.html">Abacaxi</a>
+        </section>
+        <section>
             <img src="./img/icon/laranja.png" alt="">
             <a href="laranja.html">Laranja</a>
         </section>
