--- a/pedido.html
+++ b/pedido.html
@@ -59,6 +59,8 @@
             <input type="text" name="Name" placeholder="Seu nome" required>
             <select name="Drink" id="drink" aria-placeholder="Escolha a bebida" required>
                 <option value="" disabled selected>Escolha seu drink:</option>
+                <option value="Abacaxi Ice">Abacaxi Ice</option>
+                <option value="Abacaxi X">Abacaxi X</option>
                 <option value="Laranja Fresh">Laranja Fresh</option>
                 <option value="Laranjin">Laranjin</option>
                 <option value="Limão Cítrico">Limão Cítrico</option>
